<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="117dp"
        android:layout_height="44dp"
        android:text="@string/hi"
        android:textAlignment="center"
        android:textColor="#1C0909"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="218dp"
        android:layout_height="43dp"
        android:text="Human"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.683"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="319dp"
        android:layout_height="57dp"
        android:text="@string/please_select_an_option"
        android:textAlignment="center"
        android:textColor="#170909"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.173" />

    <RadioGroup
        android:layout_width="403dp"
        android:layout_height="295dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/newRecordButton"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:checked="true"
            android:text="@string/enter_new_record"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/previousRecordButton"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/display_previous_record"
            android:textColor="#0B0404"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/logOutButton"
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:text="@string/log_out"
            android:textColor="#100202"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="222dp"
        android:layout_height="69dp"
        android:text="@string/submit"
        android:textColor="#120505"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.833" />

</androidx.constraintlayout.widget.ConstraintLayout>